--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 knuffel = "2.0"
+miette = { version="4.3.0", features=["fancy"] }
 
 [dev-dependencies]
 insta = "1.19"
