--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ glob = "0.3.0"
 knuffel = "2.0"
 miette = { version="4.3.0", features=["fancy"] }
 petgraph = "0.6"
+thiserror = "1.0"
 
 [dev-dependencies]
 insta = "1.19"
