--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atty = "0.2.14"
+clap = { version = "3.2", features=["derive"] }
 glob = "0.3.0"
 knuffel = "2.0"
-miette = { version="4.3.0", features=["fancy"] }
+miette = { version="4.7.1", features=["fancy"] }
 petgraph = "0.6"
+serde = { version = "1.0", features=["derive"] }
+serde_json = "1.0"
+tabled = { version = "0.8.0", features=["derive"] }
 thiserror = "1.0"
 
 [dev-dependencies]
