--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 atty = "0.2.14"
+camino = "1.1.1"
 clap = { version = "3.2", features=["derive"] }
 glob = "0.3.0"
 knuffel = "2.0"
