First pass of a run command
Doesn't do a lot of stuff just yet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ atty = "0.2.14"
 camino = "1.1.1"
 chumsky = "0.8.0"
 clap = { version = "3.2", features=["derive"] }
+crossbeam = "0.8.2"
 glob = "0.3.0"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
