--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
 tabled = { version = "0.8.0", features=["derive"] }
 thiserror = "1.0"
+tokio = { version=  "1.21", features=["full"] }
 
 [dev-dependencies]
 insta = "1.19"
