--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1"
 atty = "0.2.14"
 camino = "1.1.1"
 chumsky = "0.8.0"
 clap = { version = "3.2", features=["derive"] }
+colored = "2.0"
 futures = "0.3"
 glob = "0.3.0"
 knuffel = "2.0"
