--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,18 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1"
 atty = "0.2.14"
+blake3 = "1.3"
 camino = "1.1.1"
 chumsky = "0.8.0"
 clap = { version = "3.2", features=["derive"] }
 colored = "2.0"
 futures = "0.3"
 glob = "0.3.0"
+ignore = "0.4.18"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
 petgraph = "0.6"
+rayon = "1.5"
 serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
 tabled = { version = "0.8.0", features=["derive"] }
