--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ chumsky = "0.8.0"
 clap = { version = "3.2", features=["derive"] }
 colored = "2.0"
 futures = "0.3"
-glob = "0.3.0"
+glob = "0.3"
+globset = "0.4"
 ignore = "0.4.18"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
@@ -25,6 +26,8 @@ serde_json = "1.0"
 tabled = { version = "0.8.0", features=["derive"] }
 thiserror = "1.0"
 tokio = { version=  "1.21", features=["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 
 [dev-dependencies]
 insta = "1.19"
