--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ atty = "0.2.14"
 blake3 = "1.3"
 camino = "1.1.1"
 chumsky = "0.8.0"
-clap = { version = "3.2", features=["derive"] }
+clap = { version = "4", features=["derive", "wrap_help"] }
 colored = "2.0"
 futures = "0.3"
 globset = "0.4"
@@ -22,7 +22,7 @@ petgraph = "0.6"
 rayon = "1.5"
 serde = { version = "1.0", features=["derive"] }
 serde_json = "1.0"
-tabled = { version = "0.8.0", features=["derive"] }
+tabled = { version = "0.10.0", features=["derive"] }
 thiserror = "1.0"
 tokio = { version=  "1.21", features=["full"] }
 tracing = "0.1.37"
