--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ globset = "0.4"
 ignore = "0.4.18"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
+once_cell = "1.16.0"
 path-clean = "0.1.0"
 petgraph = "0.6"
 rayon = "1.5"
