--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 
 [dev-dependencies]
+assert_matches = "1.5.0"
 insta = "1.19"
 maplit = "1.0"
 rstest = "0.15.0"
