--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ colored = "2.0"
 futures = "0.3"
 globset = "0.4"
 ignore = "0.4.18"
+itertools = "0.10"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
 once_cell = "1.16.0"
@@ -31,8 +32,9 @@ tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 
 [dev-dependencies]
-assert_matches = "1.5.0"
 assert_cmd = "2.0"
+assert_fs = "1.0"
+assert_matches = "1.5.0"
 insta = "1.19"
 maplit = "1.0"
 rstest = "0.15.0"
