--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tabled = { version = "0.10.0", features=["derive"] }
 thiserror = "1.0"
 tokio = { version=  "1.21", features=["full"] }
 tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features=["env-filter"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
