--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,21 +9,22 @@ edition = "2021"
 async-trait = "0.1"
 atty = "0.2.14"
 blake3 = "1.3"
-camino = "1.1.1"
+camino = {version = "1.1.1", features= ["serde1"]}
 chumsky = "0.8.0"
 clap = { version = "4", features=["derive", "wrap_help"] }
 colored = "2.0"
 futures = "0.3"
-globset = "0.4"
+globset = {version = "0.4", features=["serde1"] }
 ignore = "0.4.18"
 knuffel = "2.0"
 miette = { version="4.7.1", features=["fancy"] }
 once_cell = "1.16.0"
 path-clean = "0.1.0"
-petgraph = "0.6"
+petgraph = {version= "0.6", features=["serde-1"]}
 rayon = "1.5"
-serde = { version = "1.0", features=["derive"] }
+serde = { version = "1.0", features=["derive", "rc"] }
 serde_json = "1.0"
+serde_with = "2.3.1"
 tabled = { version = "0.10.0", features=["derive"] }
 thiserror = "1.0"
 tokio = { version=  "1.21", features=["full"] }
@@ -33,7 +34,7 @@ tracing-subscriber = "0.3.16"
 [dev-dependencies]
 assert_matches = "1.5.0"
 assert_cmd = "2.0"
-insta = "1.19"
+insta = {version ="1.19", features = ["redactions", "json"]}
 maplit = "1.0"
 rstest = "0.15.0"
 similar-asserts = "1.4.2"
@@ -46,7 +47,4 @@ unindent = "0.1.10"
 debug = 0
 
 [profile.dev.package.insta]
-opt-level = 3
-
-[profile.dev.package.similar]
 opt-level = 3
